--- a/Final-Elearning/ELearningManagement - backend/app-manifests/deployment.yaml
+++ b/Final-Elearning/ELearningManagement - backend/app-manifests/deployment.yaml
@@ -26,3 +26,16 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "500m"
+        # Readiness and Liveness Probes
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
