--- a/Final-Elearning/Frontend/DockerFile
+++ b/Final-Elearning/Frontend/DockerFile
@@ -1,9 +1,24 @@
 FROM node:16 as build
 WORKDIR /app
+
+# Copy package.json and package-lock.json first to optimize Docker layer caching
+COPY ./package.json /app/package.json
+COPY ./package-lock.json /app/package-lock.json
+
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the source code
 COPY ./src /app/src
 COPY ./angular.json /app/angular.json
-RUN npm install && ng build --prod
+
+# Build the Angular app
+RUN ng build --prod
 
 FROM nginx:alpine
+
+# Copy the built Angular app to the Nginx directory
 COPY --from=build /app/dist/ElearningManagement /usr/share/nginx/html
+
+# Expose port 80 for HTTP traffic
 EXPOSE 80
