--- a/Final-Elearning/Frontend/package.json
+++ b/Final-Elearning/Frontend/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@angular/youtube-player": "^12.1.1",
-    "angular-bootstrap-md": "^11.1.0",
+    "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.0.2",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
@@ -31,8 +31,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.3",
-    "@angular/cli": "~12.0.3",
+    "@angular-devkit/build-angular": "^19.0.6",
+    "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
