--- a/Final-Elearning/backend/Dockerfile
+++ b/Final-Elearning/backend/Dockerfile
@@ -1,14 +1,17 @@
 
 #Base Image for java
-FROM adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.5_10
+FROM openjdk:19-jdk
 
 #simply the artifact path
-ARG artifact=target/ELearningManagement-0.0.1-SNAPSHOT.jar
+#ARG artifact=target/ELearningManagement-0.0.1-SNAPSHOT.jar
+#
+#WORKDIR /app
+#
+#COPY ${artifact} /app.jar
 
-WORKDIR /app
+COPY target/lms-portal.jar .
 
-COPY ${artifact} /app/app.jar
-
+EXPOSE 8080
 
 #Set the default command to run the Java application when the container starts
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+ENTRYPOINT ["java","-jar","lms-portal.jar"]
