--- a/Final-Elearning/backend/src/main/resources/application.properties
+++ b/Final-Elearning/backend/src/main/resources/application.properties
@@ -1,19 +1,23 @@
 server.port = 8080
-spring.datasource.url = jdbc:mysql://localhost:3306/LMSPortal
-elearningsystem
-spring.datasource.username = root
-spring.datasource.password = Sahajosi@247
+
+# Database Configuration
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:LMSPortal}
+spring.datasource.username = ${MYSQL_USER:root}
+spring.datasource.password = ${MYSQL_PASSWORD:sahajosi@2}
+#spring.datasource.password = sahajosi@2
 spring.jpa.show-sql = true
-security.basic.enable: false
-security.ignored=/**
-
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=sahanalakshminarayanan@gmail.com
-spring.mail.password=Sahajosi@2
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+# Disable security (if required for your setup)
+security.basic.enable = false
+security.ignored = /**
 
+# Email Configuration
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = sahanalakshminarayanan@gmail.com
+spring.mail.password = Sahajosi@2
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
