--- a/Final-Elearning/Frontend/package.json
+++ b/Final-Elearning/Frontend/package.json
@@ -10,17 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.3",
+    "@angular/animations": "~13.4.0",
     "@angular/cdk": "^12.1.1",
-    "@angular/common": "~12.0.3",
-    "@angular/compiler": "~12.0.3",
-    "@angular/core": "~12.0.3",
-    "@angular/forms": "~12.0.3",
-    "@angular/platform-browser": "~12.0.3",
-    "@angular/platform-browser-dynamic": "~12.0.3",
-    "@angular/router": "~12.0.3",
+    "@angular/common": "~13.4.0",
+    "@angular/compiler": "~13.4.0",
+    "@angular/core": "~13.4.0",
+    "@angular/forms": "~13.4.0",
+    "@angular/platform-browser": "~13.4.0",
+    "@angular/platform-browser-dynamic": "~13.4.0",
+    "@angular/router": "~13.4.0",
     "@angular/youtube-player": "^12.1.1",
     "angular-bootstrap-md": "^15.0.0",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.0.2",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
@@ -33,10 +34,36 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "~12.0.3",
+    "@angular/compiler-cli": "~13.4.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/bonjour": "^3.5.13",
+    "@types/connect": "^3.4.38",
+    "@types/connect-history-api-fallback": "^1.5.4",
+    "@types/cookie": "^0.6.0",
+    "@types/cors": "^2.8.17",
+    "@types/eslint": "^9.6.1",
+    "@types/eslint-scope": "^3.7.7",
+    "@types/estree": "^1.0.6",
+    "@types/express": "^5.0.0",
+    "@types/express-serve-static-core": "^5.0.4",
+    "@types/http-errors": "^2.0.4",
+    "@types/http-proxy": "^1.17.15",
     "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.5.5",
-    "@types/node": "^12.11.1",
+    "@types/jquery": "^3.5.32",
+    "@types/json-schema": "^7.0.15",
+    "@types/mime": "^3.0.4",
+    "@types/node": "^12.20.55",
+    "@types/node-forge": "^1.3.11",
+    "@types/qs": "^6.9.17",
+    "@types/range-parser": "^1.2.7",
+    "@types/retry": "^0.12.5",
+    "@types/send": "^0.17.4",
+    "@types/serve-index": "^1.9.4",
+    "@types/serve-static": "^1.15.7",
+    "@types/sizzle": "^2.3.9",
+    "@types/sockjs": "^0.3.36",
+    "@types/ws": "^8.5.13",
+    "@types/youtube": "^0.1.0",
     "cross-env": "^7.0.3",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
@@ -44,6 +71,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.2.3"
+    "typescript": "~4.6.4"
   }
 }
