--- a/Final-Elearning/Frontend/tsconfig.json
+++ b/Final-Elearning/Frontend/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -19,6 +18,17 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "typeRoots": ["node_modules/@types"],
+    "types": [
+      "node",
+      "express",
+      "cors",
+      "body-parser",
+      "jquery",
+      "jasmine",
+      "serve-static",
+      "http-errors"
     ]
   },
   "angularCompilerOptions": {
@@ -26,5 +36,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts"
+  ]
 }
