--- a/Final-Elearning/Frontend/package.json
+++ b/Final-Elearning/Frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "cross-env set NODE_OPTIONS=--openssl-legacy-provider && ng serve",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
